# ZM_ML

./: .dockerignore  .gitignore  LICENSE  README.md  main.py  pyproject.toml  shm_data.py
build_scripts/: build-gpu-openalpr  build-opencv-gpu
configs/: .dockerignore  example_annotate_filter.yml  example_client.yml  example_detection_config.yml  example_model_config.yml  example_secrets.yml  example_server.yml  example_var_include.yml  test.env
docker/: .dockerignore  Dockerfile  cpu.only.Dockerfile  cpu.tpu.Dockerfile  cuda-vino.Dockerfile  cuda12.Dockerfile  docker-compose.yml  orig.Dockerfile  server.env
docker/dlib/: Dockerfile  build_dlib.sh
docker/openalpr/: Dockerfile  build_openalpr.sh
docker/opencv/: Dockerfile  build_opencv.sh
docker/rootfs/etc/s6-overlay/s6-rc.d/log-config/: up
docker/rootfs/etc/s6-overlay/s6-rc.d/mlapi-config/: up
docker/rootfs/etc/s6-overlay/s6-rc.d/mlapi-log/: consumer-for  pipeline-name  run
docker/rootfs/etc/s6-overlay/s6-rc.d/mlapi-run/: producer-for  run
docker/rootfs/etc/s6-overlay/s6-rc.d/system-config/: up
docker/rootfs/etc/s6-overlay/s6-rc.d/user-config/: up
docker/rootfs/etc/s6-overlay/scripts/: log-config.sh  mlapi-config.sh  system-config.sh  user-config.sh
docker/scripts/: get_opencv.sh
docker/tpu/: Dockerfile
examples/: .dockerignore  EventStartCommand.sh  EventStart_example.py  MQTT_example.py  annotate_events_filt.py  bootstrap  bootstrap-WIP  continuous.py  eventproc.py  eventstart.py  example-install.env  face_test.py  filter_rclone.py  get_models.py  get_models.yml  install.py  install.sh  kmeans_dominant_color.py  mlapi.py  zm-ml.shell_helpers  zm_mlapi.service  zms.py
examples/filters/: annotate_events_filt.py  annotate_filter_requirements.txt
libs/: Media.py  api.py  zmdb.py
models/: config.py
src/: main.py  shm_data.py
src/libs/: Media.py  api.py  zmdb.py
src/models/: config.py  validators.py
src/zm_ml/: __init__.py
src/zm_ml/Client/: __init__.py  main.py
src/zm_ml/Client/Libs/: Media.py  api.py  zmdb.py
src/zm_ml/Client/Libs/API/: __init__.py  api.py
src/zm_ml/Client/Libs/DB/: __init__.py  db.py  models.py  zmdb.py
src/zm_ml/Client/Libs/Media/: pipeline.py
src/zm_ml/Client/Log/: __init__.py
src/zm_ml/Client/Models/: DEFAULTS.py  config.py  shm_data.py  utils.py  validators.py
src/zm_ml/Client/Notifications/: Gotify.py  MQTT.py  Pushover.py  ShellScript.py  __init__.py  zmNinja.py
src/zm_ml/Server/: __init__.py  app.py  auth.py  imports.py  schemas.py  utils.py
src/zm_ml/Server/Log/: __init__.py
src/zm_ml/Server/ML/: __init__.py  file_locks.py
src/zm_ml/Server/ML/Detectors/: alpr.py  aws_rekognition.py  color_detector.py  coral_edgetpu.py  face_recognition.py  onnx_runtime.py  tensorflow.py  virelai.py
src/zm_ml/Server/ML/Detectors/opencv/: cv_base.py  cv_hog.py  cv_tf.py  cv_yolo.py  onnx.py
src/zm_ml/Server/ML/Detectors/pytorch/: torch_base.py
src/zm_ml/Server/ML/Detectors/tensorrt/: trt_base.py  trt_torch.py
src/zm_ml/Server/ML/Detectors/torch/: __init__.py  base.py  torch_base.py
src/zm_ml/Server/ML/Detectors/ultralytics/: NAS.py  __init__.py  v8.py  yolo.py
src/zm_ml/Server/ML/Detectors/ultralytics/Models/: __init__.py  config.py
src/zm_ml/Server/ML/Detectors/ultralytics/yolo/: base.py  ultra_base.py
src/zm_ml/Server/Models/: DEFAULTS.py  __init__.py  config.py  env_vars.py  schemas.py  validators.py
src/zm_ml/Server/ml/: __init__.py  coco17_cv2.py  file_locks.py
src/zm_ml/Server/ml/detectors/: alpr.py  aws_rekognition.py  coral_edgetpu.py  face_recognition.py  tensorflow.py
src/zm_ml/Server/ml/detectors/opencv/: cv_base.py  cv_hog.py  cv_tf.py  cv_yolo.py
src/zm_ml/Shared/: configs.py  envsubst.py
src/zm_ml/Shared/Models/: Enums.py  config.py  validators.py
