[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "zm_ml"
version = "0.0.1a0"
dependencies = [
    "requests-toolbelt>=0.10.0",
    "sqlalchemy>=1.4.42",
    "pydantic>=1.10.2",
    'urllib3>=1.26.12',
    'pymysql>=1.0.2',
    'shapely>=1.8.5',
    'numpy>=1.23.2',
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'PyYAML>=6.0',
    'requests>=2.28.1',
    'Pillow>=9.3.0',
    'aiosmtpd>=1.4.2',
    'jose>=1.0.0',
]

authors = [
  { name="baudneo", email="baudneo@protonmail.com" },
]
#description = "A Client that allows to interact with the ZoneMinder Machine Learning API"
readme = "README.md"
#Description-Content-Type = "text/markdown; charset=UTF-8; variant=GFM"

requires-python = ">=3.7"
keywords = ["zoneminder", "object detection", "machine learning", "rest api"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[project.urls]
"Repository" = "https://github.com/baudneo/zm_ml"
"Bug Tracker" = "https://github.com/baudneo/zm_ml/issues"

[project.optional-dependencies]
face_recognition = ["face-recognition>=1.3.0"]
rekognition = ['boto3>=1.26.3']
deepface = ['deepface>=0.0.75']
tensorflow = ['tensorflow>=2.7.0']
tensorflow_gpu = ['tensorflow-gpu>=2.7.0']
torch = ['torch>=1.13.0']
cpu = ['opencv-contrib-python>=4.6.0']


#[tool.setuptools.packages.find]
## All the following settings are optional:
#where = ["src"]  # ["."] by default
##include = ["mypackage*"]  # ["*"] by default
#exclude = ["tests*", "examples*", "data*", "configs*"]  # empty by default
##namespaces = false  # true by default
