[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.2"]
build-backend = "setuptools.build_meta"


[project]
name = "zm_ml"
version = "0.0.1a0"
dependencies = [
    # Both
    'PyYAML>=6.0',
    'requests>=2.28.1',
    "pydantic>=1.10.2",
    'urllib3>=1.26.12',
    'numpy>=1.23.2',
    'pyjwt>=2.6.0',
    'distro>=1.8.0',

]

authors = [
  { name="baudneo", email="baudneo@protonmail.com" },
]
readme = "README.md"

requires-python = ">=3.7"
keywords = ["zoneminder", "object detection", "machine learning", "rest api"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[project.urls]
"Repository" = "https://github.com/baudneo/zm_ml"
"Bug Tracker" = "https://github.com/baudneo/zm_ml/issues"


[project.optional-dependencies]
face_recognition = [
    "face-recognition>=1.3.0",
        # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.88.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]
rekognition = [
    'boto3>=1.26.3',
        # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]

deepface = [
    'deepface>=0.0.75',
        # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]
tensorflow = [
    'tensorflow>=2.7.0',
    # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]
tensorflow_gpu = [
    'tensorflow-gpu>=2.7.0',
    # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]
torch = [
    'torch>=1.13.0',
        # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]
client-cpu = [
    'opencv-contrib-python>=4.6.0',
    # Client
    'psutil>=5.9.4',
    'psutil-extra>=0.2.0',
    "requests-toolbelt>=0.10.0",
    "sqlalchemy>=1.4.42",
    'pymysql>=1.0.2',
    'shapely>=1.8.5',
    'dateparser>=1.1.3',
    'paho-mqtt>=1.6.1',
    'uvloop>=0.16.0',


]
server-cpu = [
    # CPU OpenCV
    'opencv-python>=4.6.0',
    # Server
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'

]
cpu-frameworks = [
    'opencv-contrib-python>=4.6.0',
#    'torch>=1.13.0',
#    'tensorflow>=2.7.0',
#    'deepface>=0.0.75',
    'boto3>=1.26.3',
    'face-recognition>=1.3.0'
]
all-frameworks = [
#    'opencv-contrib-python>=4.6.0',
#    'torch>=1.13.0',
#    'tensorflow>=2.7.0',
#    'deepface>=0.0.75',
    'boto3>=1.26.3',
    'face-recognition>=1.3.0'
]

client = [
    'psutil>=5.9.4',
    'psutil-extra>=0.2.0',
    "requests-toolbelt>=0.10.0",
    "sqlalchemy>=1.4.42",
    'pymysql>=1.0.2',
    'shapely>=1.8.5',
    'dateparser>=1.1.3',
    'paho-mqtt>=1.6.1',
    'uvloop>=0.16.0',

    ]

server = [
    'PyYAML>=6.0',
    "pydantic>=1.10.2",
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]

all = [
#    'torch>=1.13.0',
#    'tensorflow>=2.7.0',
#    'deepface>=0.0.75',
    'boto3>=1.26.3',
    'face-recognition>=1.3.0',

    'PyYAML>=6.0',
    'requests>=2.28.1',
    "pydantic>=1.10.2",
    'urllib3>=1.26.12',
    "requests-toolbelt>=0.10.0",
    "sqlalchemy>=1.4.42",
    'pymysql>=1.0.2',
    'shapely>=1.8.5',
    'numpy>=1.23.2',
    'dateparser>=1.1.3',
    'paho-mqtt>=1.6.1',
    'uvloop>=0.16.0',
    'scikit-learn>=1.1.3',
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'aiosmtpd>=1.4.2',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'psutil>=5.9.4',
    'psutil-extra>=0.2.0',
    'python-dotenv>=0.21.0'
    ]



[tool.setuptools.packages.find]
## All the following settings are optional:
where = ["src"]  # ["."] by default
#include = ["mypackage*"]  # ["*"] by default
exclude = ["tests*", "examples*", "data*", "configs*"]  # empty by default
##namespaces = false  # true by default
