[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.2"]
build-backend = "setuptools.build_meta"


[project]
name = "zm_ml"
version = "0.0.1a2"
dependencies = [
    # Both
    'opencv-contrib-python>=4.8.0',
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "ultralytics>=8.0.1.141",
    "super_gradients>=3.1.3",
    'cryptography>=41.0.0',
    'webcolors>=1.13',
    'scikit-learn>=1.2.2',
    'PyYAML>=6.0',
    "pydantic~=2.0.3",
    "pydantic-settings~=2.0.2",
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0',

    'psutil>=5.9.4',
    'psutil-extra>=0.2.0',
    "requests-toolbelt>=0.10.0",
    "sqlalchemy>=1.4.42",
    'pymysql>=1.0.2',
    'shapely>=1.8.5',
    'dateparser>=1.1.3',
    'paho-mqtt>=1.6.1',
    'uvloop>=0.16.0',
    'pygifsicle>=1.0.7',
    'aiohttp>=3.8.3',
]

authors = [
  { name="baudneo", email="baudneo@protonmail.com" },
]
readme = "README.md"

requires-python = ">=3.8,<3.10"
keywords = ["zoneminder", "object detection", "machine learning", "rest api", "facial detection", "facial recognition", "ALPR", "license plate recognition", "face recognition", "deep learning", "opencv", ]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[project.urls]
"Repository" = "https://github.com/baudneo/zm_ml"
"Bug Tracker" = "https://github.com/baudneo/zm_ml/issues"


[project.optional-dependencies]

client = [
    'opencv-contrib-python>=4.8.0',
    'cryptography>=41.0.0',
    'psutil>=5.9.4',
    'psutil-extra>=0.2.0',
    "requests-toolbelt>=0.10.0",
    "sqlalchemy>=1.4.42",
    'pymysql>=1.0.2',
    'shapely>=1.8.5',
    'dateparser>=1.1.3',
    'paho-mqtt>=1.6.1',
    'uvloop>=0.16.0',
    'pygifsicle>=1.0.7',
    'aiohttp>=3.8.3',
]

server = [
    'opencv-contrib-python>=4.8.0',
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "ultralytics>=8.0.1.141",
    "super_gradients>=3.1.3",
    'cryptography>=41.0.0',
    'webcolors>=1.13',
    'scikit-learn>=1.2.2',
    'PyYAML>=6.0',
    "pydantic~=2.0.3",
    "pydantic-settings~=2.0.2",
    'portalocker>=2.6.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-multipart>=0.0.5',
    'python-dotenv>=0.21.0'
]



[tool.setuptools.packages.find]
## All the following settings are optional:
where = ["src"]  # ["."] by default
#include = ["mypackage*"]  # ["*"] by default
exclude = ["tests*", "examples*", "data*", "configs*"]  # empty by default
##namespaces = false  # true by default
